fixed title overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ font-style: normal;
     }
     
     .title{
-        font-size:40pt;
+        font-size:35pt;
         border: 4px solid whitesmoke;
         padding: 10px 20px;
     }
